# AlSultanXServer

./: CMakeLists.txt  README.md  main.cpp
Config/: Config.Static.ini
Fwk/Core/: IContoller.cpp  IController.h  ILogger.h  IManager.h  XEndPoint.cpp  XEndPoint.h  XJson.cpp  XJson.h
Fwk/DB/: IDataBase.Service.h  IModel.cpp  IModel.h  XColumn.h  XDBMacro.h  XQuery.h
Fwk/Server/: IXserver.h
Fwk/Server/Connection/: XConnection.h
Fwk/Server/Request/: IRequest.cpp  IRequest.h
Fwk/Server/Response/: IResponse.cpp  IResponse.h
Fwk/Server/WsServer/: XServer.Ws.cpp  XServer.Ws.h
Game/Core/DB/: XModel.cpp  XModel.h  XPgDataBase.cpp  XPgDataBase.h
Game/Core/Global/: XGlobal.cpp  XGlobal.h  XValid.cpp  XValid.h
Game/Core/Logger/: XLogger.cpp  XLogger.h
Game/Core/Server/: XHttpServer.cpp  XHttpServer.h  XServer.cpp  XServer.h
Game/Core/Setting/: XSetting.cpp  XSetting.h
Game/Module/Boot/: Boot.Mgr.cpp  Boot.Mgr.h
Game/Module/City/: ACity.cpp  ACity.h  City.DB.h  CityInfo.DB.h
Game/Module/City/Building/: Building.Ctrl.cpp  Building.Ctrl.h  Building.DB.cpp  Building.DB.h  Building.Enum.h  Building.Json.cpp  Building.Mgr.cpp  Building.Mgr.h  Building.Static.cpp  Building.Static.h  Building.Type.h
Game/Module/City/Building/Config/: Building.Config.cpp  Building.Config.h  BuildingArrowTower.Config.cpp  BuildingCastle.Config.cpp  BuildingTips.Config.cpp  BuildingTips.Config.h  BuildingWall.Config.cpp  Building_10_Bulletin.Config.cpp  Building_11_Embassy.Config.cpp  Building_12_Market.Config.cpp  Building_13_Institute.Config.cpp  Building_14_TreasurePool.Config.cpp  Building_15_Blacksmith.Config.cpp  Building_16_Stable.Config.cpp  Building_17_TargetRange.Config.cpp  Building_18_Barrack.Config.cpp  Building_19_ChariotPlant.Config.cpp  Building_1_Castle.Config.cpp  Building_201_Farm.Config.cpp  Building_202_LumberMill.Config.cpp  Building_203_IronMine.Confg.cpp  Building_203_IronMine.Config.cpp  Building_204_SilverMine.Config.cpp  Building_205_MarchingTent.Confg.cpp  Building_205_MarchingTent.Config.cpp  Building_206_FirstAidTent.Config.cpp  Building_207_CrystalMine.Config.cpp  Building_20_Fortress.Config.cpp  Building_21_DrillGrounds.Config.cpp  Building_22_HallOfWar.Config.cpp  Building_23_TrainHall.Confg.cpp  Building_23_TrainHall.Config.cpp  Building_24_HeroesMonument.Confg.cpp  Building_24_HeroesMonument.Config.cpp  Building_25_Prison.Config.cpp  Building_2_Wall.Config.cpp  Building_30001_LeisureHouse.Config.cpp  Building_301_Miracle.Confg.cpp  Building_301_Miracle.Config.cpp  (+10 more)
Game/Module/Game/: AGame.cpp  AGame.h
Game/Module/Player/: Player.DB.cpp  Player.DB.h
Game/Module/Player/Item/: Item.Type.h
Game/Module/Player/Science/: Science.Enum.h
Game/Module/Resource/: Resource.Enum.h  Resource.Type.h
Game/Module/Server/: AServer.cpp  AServer.h
Static/Json/: CityBuildings.json
Static/Json/Building/: Building.json  BuildingTips.json
Static/Json/Translation/: Ar.json
WsServer/: main.cpp
WsServer/Server/: XConnection.cpp  XServer.cpp  XServer.h
(+37 files in other folders)
